# build-your-first-agent

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/build_your_first_agent/: __init__.py  cli.py  core.py
tests/: test_core.py
